--- a/nathan.css
+++ b/nathan.css
@@ -3,6 +3,7 @@ body{
 background-image: linear-gradient(45deg, #FA8BFF 0%, #2BD2FF 52%, #2BFF88 90%);
 background-repeat: no-repeat;
 background-attachment: fixed;
+font-family: Arial, Helvetica, sans-serif;
 }
 #nathan{
     display: flex;
@@ -22,16 +23,36 @@ background-attachment: fixed;
   
 }
 #counter{
-    text-align: center;
+    margin-left: auto;
+    margin-right: auto;
+    color: white;
+    display: block;
+    text-align: center; 
     margin-top: 25vh;
+    min-width: fit-content;
+    max-height: fit-content;
+    border:3px solid  #E2D1F9;
     
+    border-radius:  10px;
+    background-color: #317773;
+    width: 10vw;
+    height:6vh;
 }
 #z{
+    border-radius: 10px;
     text-align: center;
+    background-color: #8AAAE5;
+    border: 3px solid white;
+    min-width: fit-content;
+    margin-left: auto;
+    display: block;
+    margin-right: auto;
+    width: 30vw;
+    height:6vh;
 }
 #y{
     text-align: center;
 }
 #freepik{
     text-align: center;
-}
+} 
